--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
     <version.h2>1.4.187</version.h2>
     <version.frontend>0.1-SNAPSHOT</version.frontend>
 
+    <version.graphdb-by-convention>0.1-SNAPSHOT</version.graphdb-by-convention>
   </properties>
 
   <build>
@@ -182,6 +183,13 @@
   </build>
 
   <dependencies>
+
+    <!-- Base de grafos -->
+    <dependency>
+      <groupId>ar.com.kfgodel</groupId>
+      <artifactId>graphdb-by-convention</artifactId>
+      <version>${version.graphdb-by-convention}</version>
+    </dependency>
 
     <!-- Communication classes to manage executable host container -->
     <dependency>
